[gd_scene load_steps=10 format=2]

[ext_resource path="res://Prefabs/bombPrefab.gd" type="Script" id=2]
[ext_resource path="res://Prefabs/bombFromAboveMaterial.tres" type="Material" id=3]

[sub_resource type="Curve" id=18]
_data = [ Vector2( 0, 1 ), 0.0, -1.46039, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=19]
curve = SubResource( 18 )

[sub_resource type="ParticlesMaterial" id=15]
emission_shape = 5
emission_ring_radius = 10.0
emission_ring_inner_radius = 0.0
emission_ring_height = 1.0
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 120.0
gravity = Vector3( 0, 10, 0 )
initial_velocity = 20.0
initial_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 5.0
scale_random = 1.0
scale_curve = SubResource( 19 )

[sub_resource type="Curve" id=25]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -2.83636, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=26]
curve = SubResource( 25 )

[sub_resource type="ParticlesMaterial" id=22]
emission_shape = 5
emission_ring_radius = 16.0
emission_ring_inner_radius = 16.0
emission_ring_height = 1.0
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 2.0
scale_random = 1.0
scale_curve = SubResource( 26 )

[sub_resource type="CircleShape2D" id=27]
radius = 1.5

[node name="bomb" type="Node2D"]
scale = Vector2( 1.03, 1.03 )
script = ExtResource( 2 )

[node name="FallingBomb" type="Particles2D" parent="."]
scale = Vector2( 0.1, 0.1 )
amount = 50
process_material = ExtResource( 3 )

[node name="FallenBombParticles" type="Particles2D" parent="."]
scale = Vector2( 0.1, 0.1 )
emitting = false
amount = 50
lifetime = 0.5
one_shot = true
explosiveness = 1.0
process_material = SubResource( 15 )

[node name="FallingBombMarker" type="Particles2D" parent="."]
scale = Vector2( 0.1, 0.1 )
amount = 75
process_material = SubResource( 22 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 27 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
